To restore the height of marker container it should be auto

If the zero-height marker container is triggered in the previous layout
pass, and in this layout pass, marker become inside or marker container
has other child, we need recover from zero-height, the height of marker
container should be restored to auto not the height of li.
This test passes in Firefox, WebKit as well as LayoutNG.

Bug: 918488
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I3c65a2d27f1b8dfef13c41bfe804cd1f9aab89c5
Reviewed-on: https://chromium-review.googlesource.com/c/1393129
Commit-Queue: cathie chen <cathiechen@igalia.com>
Reviewed-by: Manuel Rego <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#619658}
Former-commit-id: b164f84322a9f70eb7b86eabc0145aa688118c12